# sqlite3pp

./: .gitignore  CMakeLists.txt  README.md  sqlite3pp.pro
doc/: AUTHORS.md  CHANGELOG.md
lib/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt  sqlite3.pro
src/: CMakeLists.txt  Makefile  exceptions.cpp  functions.cpp  objects.cpp  sqlite3pp.cpp  sqlite3pp.hpp  src.pro
src/sqlite3pp/: exceptions.cpp  functions.cpp  objects.cpp  sqlite3pp.hpp
src/sqlite3pp/tools/codegen/: lib.py
src/tools/codegen/: print_exc_def.py
